Complete optional property tests for Phase 1 & 2

--- a/mobile-app/app/build.gradle
+++ b/mobile-app/app/build.gradle
@@ -103,8 +103,12 @@ android {
     
     // Configure JUnit 5 for Kotest
     testOptions {
-        unitTests.all {
-            useJUnitPlatform()
+        unitTests {
+            includeAndroidResources = true
+            returnDefaultValues = true
+            all {
+                useJUnitPlatform()
+            }
         }
     }
     
