--- a/mobile-app/app/build.gradle
+++ b/mobile-app/app/build.gradle
@@ -203,6 +203,7 @@ dependencies {
     testImplementation 'io.kotest:kotest-runner-junit5:5.8.0'
     testImplementation 'io.kotest:kotest-assertions-core:5.8.0'
     testImplementation 'io.kotest:kotest-property:5.8.0'
+    testImplementation 'io.kotest.extensions:kotest-extensions-robolectric:5.8.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation platform('androidx.compose:compose-bom:2023.10.01')
