Implement poster loading, ARCore API key, and startup optimization
- Add PosterRepository to load posters from backend
- Add ARCore API key configuration in AndroidManifest
- Optimize app startup by moving heavy init to background thread
- Add ARCORE_API_KEY_SETUP.md documentation
- Reduce main thread work to fix 700ms freeze (43 skipped frames)

--- a/mobile-app/app/src/main/AndroidManifest.xml
+++ b/mobile-app/app/src/main/AndroidManifest.xml
@@ -47,6 +47,12 @@
             android:name="com.google.ar.core" 
             android:value="required"
             tools:replace="android:value" />
+        
+        <!-- ARCore API Key for Cloud Anchors and other cloud features -->
+        <!-- Get your API key from: https://console.cloud.google.com/apis/credentials -->
+        <meta-data
+            android:name="com.google.ar.core.API_KEY"
+            android:value="AIzaSyDummy_Replace_With_Your_Actual_ARCore_API_Key" />
     </application>
 </manifest>
 
