Fix camera renderer and sensor timestamp issues
- Implement delegating renderer pattern to avoid IllegalStateException
- Fix AR_ERROR_TEXTURE_NOT_SET by properly initializing camera texture
- Change ARCore to BLOCKING mode to fix sensor timestamp ordering
- Add error handling for timestamp and resource exhaustion issues
- Camera preview now working, AR tracking stabilized

--- a/mobile-app/app/build.gradle
+++ b/mobile-app/app/build.gradle
@@ -139,7 +139,8 @@ dependencies {
     implementation 'androidx.compose.material:material-icons-extended:1.5.4'
     
     // ARCore with Sceneview for 3D rendering
-    implementation 'com.google.ar:core:1.43.0'
+    // Updated to latest stable version to fix device compatibility issues
+    implementation 'com.google.ar:core:1.44.0'
     implementation 'io.github.sceneview:arsceneview:2.2.1'
     
     // Sceneform removed due to Filament version conflict with Sceneview
